--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <style>
   body { font-family: 'Poppins', sans-serif; }
   input:focus, select:focus { outline: none; box-shadow: 0 0 0 3px rgba(255,184,141,0.2); border-color:#ffb88d; }
-  .step { display:none; }
-  .step.active { display:block; }
+  .form-step { display:none; }
+  .form-step.active { display:block; }
   .confetti {
     position: fixed;
     width: 8px;
@@ -55,7 +55,7 @@
   <form id="revealForm" class="space-y-8">
     <div id="progress" class="font-semibold text-center mb-4"></div>
     <!-- Section 1 -->
-    <div class="step bg-white rounded-2xl shadow-xl p-8" id="section1">
+    <div class="form-step bg-white rounded-2xl shadow-xl p-8" id="section1">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">A</div>
         <h2 class="text-2xl font-bold text-gray-800">Background Color</h2>
@@ -99,7 +99,7 @@
       </div>
     </div>
     <!-- Section 2 -->
-    <div class="step bg-white rounded-2xl shadow-xl p-8" id="section2">
+    <div class="form-step bg-white rounded-2xl shadow-xl p-8" id="section2">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">B</div>
         <h2 class="text-2xl font-bold text-gray-800">Page 1</h2>
@@ -189,7 +189,7 @@
         <button type="button" class="next px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Next</button>
       </div>
       <!-- Section 3 -->
-    <div class="step bg-white rounded-2xl shadow-xl p-8" id="section3">
+    <div class="form-step bg-white rounded-2xl shadow-xl p-8" id="section3">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">C</div>
         <h2 class="text-2xl font-bold text-gray-800">Page 2</h2>
@@ -467,7 +467,7 @@
       <button type="button" class="next px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Next</button>
     </div>
     <!-- Generate URL -->
-    <div class="step bg-white rounded-2xl shadow-xl p-8 text-center" id="generateStep">
+    <div class="form-step bg-white rounded-2xl shadow-xl p-8 text-center" id="generateStep">
       <button id="generateBtn" type="button" class="w-full py-3 rounded-lg font-semibold bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Generate My Reveal URL</button>
       <div class="flex justify-start mt-4">
         <button type="button" class="back px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Back</button>
@@ -835,7 +835,7 @@ const defaultText=generateBtn.textContent;
 const statusEl=document.getElementById('statusMsg');
 
 // ----- Wizard Step Navigation -----
-const steps=document.querySelectorAll('#revealForm .step');
+const steps=document.querySelectorAll('#revealForm .form-step');
 const progressEl=document.getElementById('progress');
 let currentStep=0;
 function showStep(i){
