--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
+          <h2 class="form-step-question">What background color do you want for your reveal?</h2>
           <label for="backgroundTheme" class="block text-sm font-semibold text-gray-700 mb-2">Background Color</label>
           <select id="backgroundTheme" class="w-full px-4 py-3 border border-gray-300 rounded-lg mb-3" required>
             <option value="">Choose a theme...</option>
